--- a/content/docs/guides/instances.mdx
+++ b/content/docs/guides/instances.mdx
@@ -8,7 +8,10 @@ Instances are parallel "rooms" or "lobbies" of a world.
 Each instance can only hold a limited number of users, but there is no limit on how many instances can exist of a world.
 Instances are uniquely identified by the combined World ID and Instance ID.
 
-*Note: as of 2024-05-02, VRChat indicated in [a Developer Update](https://ask.vrchat.com/t/developer-update-2-may-2024/24284#changes-to-instance-apis-and-auto-creation-13) an eventual intent to replace the current system with a UUID-ish system similar to User IDs*
+
+<Callout>
+As of 2024-05-02, VRChat indicated in [a Developer Update](https://ask.vrchat.com/t/developer-update-2-may-2024/24284#changes-to-instance-apis-and-auto-creation-13) an eventual intent to replace the current system with a UUID-ish system similar to User IDs.
+</Callout>
 
 ## Instance Generator
 
