--- a/content/docs/(guides)/contributing/openapi.mdx
+++ b/content/docs/(guides)/contributing/openapi.mdx
@@ -1,10 +1,8 @@
 ---
-title: Contributing to the API
+title: Contributing to the OpenAPI Specification
 category: general
 difficulty: hard
 ---
-
-**Please read ["Contributing to the Website"](/tutorials/contribute-website) first. You will need a local instance of the website to preview what the docs will look like.**
 
 ## Structure
 
