--- a/content/docs/(guides)/getting-started.mdx
+++ b/content/docs/(guides)/getting-started.mdx
@@ -1,5 +1,6 @@
 ---
 title: Getting Started
+description: A quick-start guide to get you started with the VRChat API.
 category: general
 difficulty: easy
 icon: BookMarked
@@ -23,7 +24,7 @@ Insomnia is a popular and fast REST client that's available for Windows, Linux a
 You can use Insomnia for exploring the API in a user-friendly interface.
 The program automatically handles authentication, cookie management and environment variables.
 
-<a target="_blank" href="https://insomnia.rest/download" class="btn btn-purple fw-bold btn-lg">Download Insomnia</a>
+<a target="_blank" href="https://insomnia.rest/download" className="btn btn-purple fw-bold btn-lg">Download Insomnia</a>
 
 Simply click the downloaded EXE (or binary for your operating system) and Insomnia will install automatically.
 Once installed you should see a window similar to the one in the picture below.
@@ -56,7 +57,7 @@ Now you're ready to go! Now click on "VRChat API Documentation" to proceed.
 
 Now we are going to send our first request!
 
-<div class="callout callout-info mb-3">
+<div className="callout callout-info mb-3">
   <strong>clientApiKey has been deprecated</strong><br/>
   You can skip it without negative consequences.
 </div>
@@ -77,7 +78,7 @@ If you **do** have 2FA enabled (good job!) you need to locate the "**Verify 2FA 
 and then replace `string` with the real code from your 2FA generator app. If everything validated correctly you should see `verified: true` in the response.
 You can now go back to the "Get Current User Info" endpoint and try get your own info again.
 
-<div class="callout callout-warning mb-3">
+<div className="callout callout-warning mb-3">
   <strong>⚠️ Account Lockout Warning!</strong><br/>
   If you got an error, please stop and contact help on Discord, as spamming the 2FA can get your account temporarily locked!
 </div>
