--- a/content/docs/(sdks)/javascript/index.mdx
+++ b/content/docs/(sdks)/javascript/index.mdx
@@ -1,8 +1,147 @@
 ---
 title: JavaScript
+fullTitle: VRChat.js
 icon: JavaScript
+description: VRChat.js is a JavaScript SDK for interacting with the VRChat API, allowing developers to create applications that can access and manipulate VRChat data.
 ---
 
-<Callout>
-  This page is incomplete, consider contributing to it!
-</Callout>
+## Install
+To use the VRChat.js SDK, you need to install it using one of the following methods:
+
+```package-install
+npm install vrchat
+```
+
+## Usage
+You can import the VRChat class from the SDK and create an instance of it, providing your application details such as name, version, and contact information.
+
+```js twoslash
+import { VRChat } from "vrchat";
+
+const vrchat = new VRChat({
+	/**
+	 * When using the VRChat API, you must provide an application name, version, and contact information.
+	 * This is used to identify your application to VRChat, and to provide support if needed.
+	 */
+	application: {
+		name: "Example",
+		version: "1.5.1",
+		/**
+		 * An email, or a URL to a support page.
+		 */
+		contact: "you@example.com"
+	},
+});
+```
+
+### Authentication
+To interact with the VRChat API, you need to authenticate your application.
+
+```ts twoslash
+// @noErrors
+import { VRChat, VRChatError } from "vrchat";
+const vrchat = new VRChat();
+
+// ---cut-before---
+const { data: user } = await vrchat
+	.getCurrentUser({ throwOnError: true })
+	/**
+	 * `throwOnError: true` will throw on failed requests, instead of returning the error
+	 * as part of the response. This is useful for handling errors in a more structured way.
+	 */
+	.catch(async (error) => {
+		// Only handle the error if it is a 401 response, which means the user was not logged in.
+		if (!(error instanceof VRChatError) || error.statusCode !== 401)
+			throw error;
+
+		return vrchat.login({
+			username,
+			password,
+			/**
+			 * This function will be called when two-factor authentication is required.
+			 * Accepts any code, such as from an authenticator app or a recovery code.
+			 */
+			twoFactorCode: async () => {
+				const { code } = await prompts({
+					name: "code",
+					type: "text",
+					message: "Two-factor authentication code",
+				});
+
+				return code;
+			},
+			/**
+			 * Or, automatically generate a code from a secret.
+			 * Useful for service accounts & automated workflows.
+			 *
+			 * If this is a user-initiated login, don't use this.
+			 */
+			// totpSecret: "",
+			throwOnError: true,
+		});
+	});
+
+console.log(`Logged in as ${data.displayName}.`);
+```
+
+### Persistent sessions across restarts
+
+The VRChat.js SDK supports persistent sessions, allowing you to log in once and reuse your session cookies across application restarts—no need to log in again every time.
+
+By default, if you don't provide a `keyv` instance, the SDK uses an in-memory store, meaning your session data will be lost on restart. To persist sessions, pass a `keyv` instance when creating your `VRChat` client.
+
+Any [Keyv-compatible adapter](https://npm.im/keyv/#official-storage-adapters) will work—such as [`keyv-file`](https://npm.im/keyv-file), [`@keyv/redis`](https://npm.im/@keyv/redis), or [`@keyv/postgres`](https://npm.im/@keyv/postgres). For this example, we'll use `keyv-file` to store cookies on disk.
+
+Install it with:
+
+```package-install
+keyv-file
+```
+
+And then use it in your code like this:
+```ts twoslash
+// [!code ++]
+import KeyvFile from "keyv-file";
+import { VRChat } from "vrchat";
+
+// @noErrors
+const vrchat = new VRChat({
+	application: { /* ... */ },
+	// [!code ++:2]
+	// Save cookies to a file, so you can reuse them later.
+	keyv: new KeyvFile({ filename: "./data.json" }),
+});
+```
+
+### Closing notes
+Most editors provide autocompletion for the `VRChat` object, allowing you to explore the available methods and properties. It is recommended to use an editor with TypeScript support for the best experience.
+
+```ts twoslash
+// @noErrors
+import { VRChat } from "vrchat";
+const vrchat = new VRChat();
+// ---cut-before---
+vrchat.
+//     ^|
+```
+
+## Frequently Asked Questions
+
+### Error: You must provide an application name, version, and contact information.
+This error occurs when you create a new instance of the `VRChat` class without providing the required application information. The `application` object must include a `name`, `version`, and `contact` field. VRChat requires this information to identify your application and contact you if necessary.
+
+To resolve this error, ensure that you provide the necessary information when creating a new `VRChat` instance. Here is an example of how to do this:
+
+```typescript twoslash title="example.ts"
+import { VRChat } from "vrchat";
+
+const vrchat = new VRChat({
+	/* [!code ++:6] */
+	// Remember to change this!
+  application: {
+		name: "Example",
+		version: "1.5.1",
+		contact: "you@example.com"
+	}
+});
+```
