fix(js): suggest vrchat@next instead.

--- a/content/docs/(sdks)/javascript/index.mdx
+++ b/content/docs/(sdks)/javascript/index.mdx
@@ -9,7 +9,7 @@ description: VRChat.js is a JavaScript SDK for interacting with the VRChat API, 
 To use the VRChat.js SDK, you need to install it using one of the following methods:
 
 ```package-install
-npm install vrchat
+npm install vrchat@next
 ```
 
 ## Usage
